Modinreach 351 nolana (#335)
* Updated version to 2.1.0-SNAPSHOT and NEWS.md (#286)

* Updated version to 2.1.0-SNAPSHOT and NEWS.md

* Updated NEWS.md

* MODINREACH-304: Support inventory 12.0 in ModuleDescriptor "requires"

Add version 12.0 to the list of supported inventory interface versions in ModuleDescriptor "requires" section.

DELETE /inventory/instances and DELETE /inventory/items have been deleting all records.

MODINV-731 changed them to delete records by CQL, this requires a major interface version bump.

mod-inn-reach doesn't need any code change for this because it doesn't use these two DELETE APIs.

* [MODINREACH-307]: keyword search by patron name added

* [MODINREACH-307]: test case added for keyword search for patron name

* MODINREACH-306 : fixed applied for Items with effective locations in locations not to contribute (contribution criteria) being contributed

* MODINREACH-306 : code correction for code smell as per sonarqube for method : isExcludedLocation

* MODINREACH-306 : JUnit Test Case Coverage for ContributionValidationServiceImpl:isExcludedLocation()

* MODINREACH-306

* MODINREACH-306 : corrected typo in method names

* MODINREACH-306 : Added Test Cases for more code coverage

* MODINREACH-306 : changes to resolve sonar cloud code coverage issue

* MODINREACH-306 : Code changes done as per reviewer's suggestion

* [MODINREACH-306]: test case updated for excluded location

* [MODINREACH-306]: test case updated for excluded location

* [MODINREACH-306]: test case updated for excluded location

* [MODINREACH-306] - Updated test cases.

* [MODINREACH-306] - Updated test cases.

* [MODINREACH-306] - Updated test cases.

* MODINREACH-306 : increased duration for ASYNC_AWAIT_TIMEOUT in CirculationApiTest

* Modinreach 316 (#293)

* [MODINREACH-316] 1.inventory record deletion added

* [MODINREACH-316] 1.removed unused code

* [MODINREACH-316] 1.removed unused code

* [MODINREACH-316] 1