@@ -12,7 +12,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
@@ -22,6 +21,7 @@ import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import org.folio.innreach.domain.dto.InnReachResponseData;
 import org.folio.innreach.domain.service.CentralServerConfigurationService;
 import org.folio.innreach.domain.service.CentralServerService;
 import org.folio.innreach.dto.AgenciesPerCentralServerDTO;
@@ -32,7 +32,6 @@ import org.folio.innreach.dto.CentralServerAgenciesDTO;
 import org.folio.innreach.dto.CentralServerDTO;
 import org.folio.innreach.dto.CentralServerItemTypesDTO;
 import org.folio.innreach.dto.CentralServerPatronTypesDTO;
-import org.folio.innreach.dto.InnReachResponseDTO;
 import org.folio.innreach.dto.ItemType;
 import org.folio.innreach.dto.ItemTypesPerCentralServerDTO;
 import org.folio.innreach.dto.LocalServer;
@@ -60,8 +59,10 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
 
   @Override
   public CentralServerAgenciesDTO getAllAgencies() {
+    log.debug("getAllAgencies:: Fetching agencies");
     var agencies = loadRecordsPerServer(INN_REACH_LOCAL_SERVERS_URI, LocalServerAgenciesDTO.class, this::toAgenciesOrNull);
 
+    log.info("getAllAgencies:: Agencies fetched successfully");
     return new CentralServerAgenciesDTO()
         .centralServerAgencies(agencies)
         .totalRecords(agencies.size());
@@ -69,8 +70,10 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
 
   @Override
   public CentralServerItemTypesDTO getAllItemTypes() {
+    log.debug("getAllItemTypes:: Fetching all item types");
     var csItemTypes = loadRecordsPerServer(INN_REACH_ITEM_TYPES_URI, CentralItemTypesDTO.class, this::toItemTypesOrNull);
 
+    log.info("getAllItemTypes:: Item types fetched successfully");
     return new CentralServerItemTypesDTO()
         .centralServerItemTypes(csItemTypes)
         .totalRecords(csItemTypes.size());
@@ -78,9 +81,11 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
 
   @Override
   public CentralServerPatronTypesDTO getAllPatronTypes() {
+    log.debug("getAllPatronTypes:: Fetching all patron types");
     var csPatronTypes = loadRecordsPerServer(INN_REACH_PATRON_TYPES_URI, CentralPatronTypesDTO.class,
                             this::toPatronTypesOrNull);
 
+    log.info("getAllPatronTypes:: Patron types fetched successfully");
     return new CentralServerPatronTypesDTO()
         .centralServerPatronTypes(csPatronTypes)
         .totalRecords(csPatronTypes.size());
@@ -88,13 +93,15 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
 
   @Override
   public List<LocalServer> getLocalServers(UUID centralServerId) {
+    log.debug("getLocalServers:: parameters centralServerId: {}", centralServerId);
     return loadRecordPerServer(INN_REACH_LOCAL_SERVERS_URI, LocalServerAgenciesDTO.class,
       resp -> emptyIfNull(resp.getRight().getLocalServerList()), centralServerId);
   }
 
-  private <Rec, CSResp extends InnReachResponseDTO> List<Rec> loadRecordsPerServer(String uri,
-      Class<CSResp> centralServerRecordType, Function<Pair<CentralServerDTO, CSResp>, Rec> responseToRecordsMapper) {
+  private <T, U extends InnReachResponseData> List<T> loadRecordsPerServer(String uri,
+      Class<U> centralServerRecordType, Function<Pair<CentralServerDTO, U>, T> responseToRecordsMapper) {
 
+    log.debug("loadRecordsPerServer:: parameters uri: {}, centralRecordType: {}, responseToRecordsMapper: {}", uri, centralServerRecordType, responseToRecordsMapper);
     var servers = centralServerService.getAllCentralServers(0, Integer.MAX_VALUE).getCentralServers();
 
     return servers.stream()
@@ -102,14 +109,15 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
         .filter(this::successfulResponse)
         .map(responseToRecordsMapper)
         .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  private <Rec, CSResp extends InnReachResponseDTO> Rec loadRecordPerServer(String uri,
-    Class<CSResp> centralServerRecordType,
-    Function<Pair<CentralServerDTO, CSResp>, Rec> responseToRecordsMapper,
+  private <T, U extends InnReachResponseData> T loadRecordPerServer(String uri,
+    Class<U> centralServerRecordType,
+    Function<Pair<CentralServerDTO, U>, T> responseToRecordsMapper,
     UUID centralServerId) {
 
+    log.debug("loadRecordPerServer:: parameters uri: {}, centralServerRecordType: {}, responseToRecordsMapper: {}, centralServerId: {}", uri, centralServerRecordType, responseToRecordsMapper, centralServerId);
     var server = centralServerService.getCentralServer(centralServerId);
 
     return Optional.of(server)
@@ -122,6 +130,7 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
 
   private AgenciesPerCentralServerDTO toAgenciesOrNull(
       Pair<CentralServerDTO, LocalServerAgenciesDTO> centralServerWithResponse) {
+    log.debug("toAgenciesOrNull:: parameters centralServerWithResponse: {}", centralServerWithResponse);
     var agencies = flatMapItems(centralServerWithResponse.getRight().getLocalServerList(),
                                 localServer -> toStream(localServer.getAgencyList()));
     var cs = centralServerWithResponse.getLeft();
@@ -133,6 +142,7 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
 
   private ItemTypesPerCentralServerDTO toItemTypesOrNull(
       Pair<CentralServerDTO, CentralItemTypesDTO> centralServerWithResponse) {
+    log.debug("toItemTypesOrNull:: parameters centralServerWithResponse: {}", centralServerWithResponse);
     var itList = emptyIfNull(centralServerWithResponse.getRight().getItemTypeList());
     var cs = centralServerWithResponse.getLeft();
 
@@ -143,6 +153,7 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
 
   private PatronTypesPerCentralServerDTO toPatronTypesOrNull(
       Pair<CentralServerDTO, CentralPatronTypesDTO> centralServerWithResponse) {
+    log.debug("toPatronTypesOrNull:: parameters centralServerWithResponse: {}", centralServerWithResponse);
     var ptList = emptyIfNull(centralServerWithResponse.getRight().getPatronTypeList());
     var cs = centralServerWithResponse.getLeft();
 
@@ -151,8 +162,9 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
     return isNotEmpty(ptList) ? createPatronTypes(cs, ptList) : null;
   }
 
-  private <CSResp extends InnReachResponseDTO> Function<CentralServerDTO, Pair<CentralServerDTO, CSResp>> retrieveAllConfigRecords(
-      String uri, Class<CSResp> recordType) {
+  private <T extends InnReachResponseData> Function<CentralServerDTO, Pair<CentralServerDTO, T>> retrieveAllConfigRecords(
+      String uri, Class<T> recordType) {
+    log.debug("retrieveAllConfigRecords:: parameters uri: {}, recordType: {}", uri, recordType);
     return centralServer -> {
       log.info("Retrieving {} from central server: code = {}", recordType.getSimpleName(),
           centralServer.getCentralServerCode());
@@ -170,8 +182,8 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
     };
   }
 
-  private <CSResp extends InnReachResponseDTO> boolean successfulResponse(
-      Pair<CentralServerDTO, CSResp> centralServerWithResponse) {
+  private <T extends InnReachResponseData> boolean successfulResponse(
+      Pair<CentralServerDTO, T> centralServerWithResponse) {
     var cs = centralServerWithResponse.getLeft();
     var resp = centralServerWithResponse.getRight();
 
@@ -204,7 +216,7 @@ public class CentralServerConfigurationServiceImpl implements CentralServerConfi
         .patronTypes(patronTypes);
   }
 
-  private static boolean isOk(InnReachResponseDTO innReachResponse) {
+  private static boolean isOk(InnReachResponseData innReachResponse) {
     return OK_STATUS.equals(innReachResponse.getStatus()) && CollectionUtils.isEmpty(innReachResponse.getErrors());
   }
 
