@@ -12,9 +12,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 
 import lombok.Builder;
 import lombok.RequiredArgsConstructor;
@@ -73,6 +73,7 @@ public class RecordTransformationServiceImpl implements RecordTransformationServ
 
   @Override
   public BibInfo getBibInfo(UUID centralServerId, Instance instance) {
+    log.debug("getBibInfo:: parameters centralServerId: {}, instance: {}", centralServerId, instance);
     var bibId = instance.getHrid();
 
     var suppressionStatus = validationService.getSuppressionStatus(centralServerId, instance.getStatisticalCodeIds());
@@ -85,18 +86,20 @@ public class RecordTransformationServiceImpl implements RecordTransformationServ
     bibInfo.setMarc21BibFormat(MARC_BIB_FORMAT);
     bibInfo.setMarc21BibData(marc.getBase64rawContent());
     bibInfo.setItemCount(countContributionItems(centralServerId, instance.getItems()));
+    log.info("getBibInfo:: result: {}", bibInfo);
     return bibInfo;
   }
 
   @Override
   public List<BibItem> getBibItems(UUID centralServerId, List<Item> items, BiConsumer<Item, Exception> errorHandler) {
+    log.debug("getBibItems:: parameters centralServerId: {}, item: {}, errorHandler: {}", centralServerId, items, errorHandler);
     var mappings = getContributionMappings(centralServerId);
     log.info("Resolved contribution mappings: {}", mappings);
 
     return items.stream()
       .map(item -> convertItem(centralServerId, item, mappings, errorHandler))
       .filter(Objects::nonNull)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private BibItem convertItem(UUID centralServerId, Item item, ContributionMappings mappings, BiConsumer<Item, Exception> errorHandler) {
@@ -202,7 +205,7 @@ public class RecordTransformationServiceImpl implements RecordTransformationServ
       validationService.getSuppressionStatus(centralServerId, fetchHoldingStatisticalCodes(item));
   }
 
-  private List<UUID> fetchHoldingStatisticalCodes(Item item) {
+  private Set<UUID> fetchHoldingStatisticalCodes(Item item) {
     return holdingsService.find(item.getHoldingsRecordId())
       .map(Holding::getStatisticalCodeIds)
       .orElse(null);
